office-kubernetes/kustomize/media/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
      volumes:
        - name: tmp-config
          emptyDir: {}
      containers:
        - name: prowlarr
          image: ghcr.io/home-operations/prowlarr:rolling
          command:   
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - mountPath: /config/
              name: tmp-config
              readonly: false
