office-kubernetes/kustomize/media/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  selector:
    app: prowlarr
