office-kubernetes/kustomize/media/prowlarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
  - name: web
    namespace: gateway-system
  hostnames:
    - "radarr.k8s.local-k8s.tech"
  rules:
    - backendRefs:
      - name: radarr
        port: 80
